crates/envoy-config/fuzz/corpus/parse_bootstrap/seed-buffer.yaml
node:
  id: buffer-fuzz-seed
  cluster: buffer-fuzz
static_resources:
  listeners:
    - name: ingress_http
      address:
        socket_address: { address: 127.0.0.1, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                route_config:
                  name: default
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/disabled" }
                          route: { cluster: backend }
                          typed_per_filter_config:
                            envoy.filters.http.buffer:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.BufferPerRoute
                              disabled: true
                        - match: { prefix: "/small" }
                          route: { cluster: backend }
                          typed_per_filter_config:
                            envoy.filters.http.buffer:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.BufferPerRoute
                              buffer:
                                max_request_bytes: 4
                        - match: { prefix: "/" }
                          route: { cluster: backend }
                http_filters:
                  - name: envoy.filters.http.buffer
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                      max_request_bytes: 10
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: backend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address: { socket_address: { address: 127.0.0.1, port_value: 9001 } }
